# Firefox-Search-QA-telemetry-management

./:  wsgi.py  .flaskenv  .gitignore  app.py  config.py  glean_data.csv  metrics.db  pyproject.toml  readme.md  run.py  schema.sql
app/: __init__.py  commands.py  db.py  db_migrations.py
app/routes/: __init__.py  auth.py  main.py  management.py  planning.py  user_management.py
app/services/: database.py  helpers.py
app/static/css/: style.css
app/templates/: activity_log.html  base.html  edit_metric.html  edit_user.html  index.html  metric_status.html  metrics.html  planning.html  reports.html  user_management.html
app/templates/user_management/: add.html  index.html
app/utils/: decorators.py  helpers.py  template_filters.py
db/: import_data.py  setup_database.py
migrations/: v1.sql
static/css/: style.css
templates/: activity_log.html  index.html  metric_status.html  metrics.html  planning.html  redirect.html  reports.html
templates/auth/: login.html  user_management.html
templates/user_management/: add.html  edit.html  index.html
